[package]
name = "crater-tree"
version = "0.1.0"
authors = ["Pietro Albini <pietro@pietroalbini.org>"]
license = "MIT"

[dependencies]
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
failure = "0.1.5"
tempdir = "0.3.7"
cargo_metadata = "0.8.1"
rayon = "1.0.3"
petgraph = "0.4.13"
serde_json = "1.0.45"
